# projet-poule-qui-chante

./: README.md  data_final.csv  functions.py  notebook_1.ipynb  pyproject.toml
database/: FAOSTAT_data_fr_6-9-2025-2.csv  bilan_alimentaire_2020.csv  culture_produits_poulet_2020.csv  disponibilite_utilisation_2020.csv  groupe_pays_fao.csv  indicateur_emploi_production_animal_2020.csv  population_2020.csv  prix_production_poule_2020.csv  securite_alimentaire_2020.csv
export/: diapo_alimentaire.csv  final_data_2020.csv  groupe_pays.csv  indices_commerciaux_2020.csv  population_2020.csv  securite_alimentaire_2020.csv
notebooks/: acp.ipynb  clustering.ipynb  countries.ipynb  exploratory_analysis.ipynb  explore_group_pays.ipynb  explore_indices_commerciaux.ipynb  explore_population.ipynb  explore_securite_alimentaire.ipynb  merge.ipynb
src/code/: clustering.ipynb  data_processing.ipynb  exploratory_analysis.ipynb
src/data/raw_data/: FAOSTAT_data_5-3-2023_country_groups_2023.csv  FAOSTAT_data_en_5-10-2023_GDP_2020.csv  FAOSTAT_data_en_5-8-2023_pop_2020.csv  FAOSTAT_data_en_5-8-2023_poultry_trade_2020.csv  FAOSTAT_data_en_5-8-2023_poultry_utilisation_2020.csv  FAOSTAT_data_en_5-8-2023_stability_2020.csv  OWID_animal-protein-vs-gdp_2020.csv  OWID_share-of-deaths-obesity_2019.csv  OWID_trade-as-share-of-gdp_2020.csv
src/poule_qui_chante/: __init__.py
