[project]
name = "poule-qui-chante"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ishem Zerzour", email = "zerzourishem@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "chardet>=5.2.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "missingno>=0.5.2",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "pip>=25.1.1",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
